criando smokeTest para verificar a inicialização correta da interface da aplicação